--- a/web/package.json
+++ b/web/package.json
@@ -36,6 +36,7 @@
     "react-helmet": "^5.2.1"
   },
   "dependencies": {
-    "gatsby-image": "^2.0.41"
+    "gatsby-image": "^2.0.41",
+    "tailwindcss": "^1.4.1"
   }
 }
